fix blog pagination and spacing issues

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -20,7 +20,7 @@
     position: absolute !important
     top: 0px
 
-.content section
+#main.content section
   padding: 4em 0 5em 0
   &:last-child
     padding-bottom: 80px + $footerHeight
@@ -36,6 +36,7 @@
 
 #main.blog
   padding-top: $topbar-height * 2
+  margin-bottom: 35px
 
 .section--contrast
   background-color: $section-contrast
